Perky: fix text overflowing with small button sizes

--- a/src/blue.styl
+++ b/src/blue.styl
@@ -172,7 +172,6 @@ fieldset
     flex: 2 0 320px
 
 .perk
-    width: 20%
     text-align: center
     overflow: hidden
     border: 1px solid black
@@ -192,7 +191,10 @@ fieldset
         display: none
     &.more
         line-height: 105%
+    &.large
+        width: 20%
     &.small
         width: 16.6666666666%
     &.tiny
         width: 14.2857142857%
+
